network: update on/off switch button when vpn becomes active/inactive

https://bugzilla.gnome.org/show_bug.cgi?id=699275